# DJI-Payload-SDK-Pi-Zero

./: .gitmodules  CMakeLists.txt  README.md  build_log.txt
docs/: dependencies.md  os-setup.md  ssh-connection.md  test-gpio.md
src/: listener.cpp  main.cpp
